--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,10 @@
 {
   "useLibraryCodeForTypes": false,
+  "reportPrivateUsage": "warning",
+  "reportUnknownArgumentType": "warning",
+  "reportUnknownMemberType": "warning",
+  "reportUnknownVariableType": "warning",
+  "reportUnsupportedDunderAll": "warning",
   "extraPaths": [
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_keras/site-packages",
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow_macos/site-packages",
