implement hello_world plot

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -14,6 +14,7 @@
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow_io_gcs_filesystem/site-packages",
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_requests/site-packages",
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_pandas/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_numpy/site-packages"
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_numpy/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_matplotlib/site-packages"
   ]
 }
