--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -6,15 +6,17 @@
   "reportUnknownVariableType": "warning",
   "reportUnsupportedDunderAll": "warning",
   "extraPaths": [
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_keras/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow_macos/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow_estimator/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow_io_gcs_filesystem/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_tensorflow_io_gcs_filesystem/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_requests/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_pandas/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_numpy/site-packages",
-    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~0.31.0~pip~pypi_311_matplotlib/site-packages"
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_keras/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_tensorflow_macos/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_tensorflow/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_tensorflow_estimator/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_tensorflow_io_gcs_filesystem/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_tensorflow_io_gcs_filesystem/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_requests/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_pandas/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_pandas_stubs/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_numpy/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_matplotlib/site-packages",
+    "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_seaborn/site-packages"
   ]
 }
