--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,10 +1,25 @@
 {
-  "useLibraryCodeForTypes": false,
-  "reportPrivateUsage": "warning",
   "reportUnknownArgumentType": "warning",
-  "reportUnknownMemberType": "warning",
-  "reportUnknownVariableType": "warning",
   "reportUnsupportedDunderAll": "warning",
+  "reportIncompleteStub": "none",
+  "reportMissingParameterType": "none",
+  "reportUnknownMemberType": "none",
+  "reportUnknownParameterType": "none",
+  "reportUnknownVariableType": "none",
+  "reportCallInDefaultInitializer": "error",
+  "reportImplicitStringConcatenation": "error",
+  "reportUnnecessaryTypeIgnoreComment": "error",
+  "enableTypeIgnoreComments": false,
+  "reportMissingSuperCall": "none",
+  "reportUninitializedInstanceVariable": "none",
+  "reportShadowedImports": "none",
+  "reportPrivateUsage": "none",
+  "reportMissingModuleSource": "none",
+  "reportIncompatibleMethodOverride": "none",
+  "reportIncompatibleVariableOverride": "none",
+  "reportPropertyTypeMismatch": "none",
+  "reportOverlappingOverload": "none",
+  "reportSelfClsParameterName": "none",
   "extraPaths": [
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_keras/site-packages",
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_tensorflow_macos/site-packages",
@@ -18,5 +33,11 @@
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_numpy/site-packages",
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_matplotlib/site-packages",
     "bazel-bin/src/time_series_forecasting/main.runfiles/rules_python~~pip~pypi_311_seaborn/site-packages"
+  ],
+  "exclude": [
+    "bazel-bin/**/*",
+    "bazel-out/**/*",
+    "bazel-tensorflow-python/**/*",
+    "bazel-testlogs/**/*"
   ]
 }
